# rcsb-chem-search

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  API.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  NOTICE.md  NOTICE.txt  README.md  SECURITY.md  compose.yaml  justfile  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yaml  project.yaml  release.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: _build_dist.yaml  _bump-deps.yaml  _check-docker.yaml  _check-hooks.yaml  _check-ruff.yaml  _publish-github.yaml  _publish-pypi.yaml  _reformat.yaml  _run-pytest-single.yaml  _run-pytest.yaml  _sync-repo-labels.yaml  _sync-repo-metadata.yaml  _test.yaml  bump-version.yaml  check-links.yaml  check-pr-metadata.yaml  check-security.yaml  deploy-packages.yaml  deploy-to-harbor.yaml  format-pr.yaml  main-test.yaml  pr-bot.yaml  pr-check-docker.yaml  pr-quick-check.yaml  pr-test.yaml  publish.yaml  pytest.yaml  set-repo-metadata.yaml  sync-repo.yaml  test-pr.yaml  update-coverage.yaml  validate.yaml
docs/: schema.openapi.yaml  sketch-of-chem-search-form.html
k8s/helm/: Chart.yaml  README.md
k8s/helm/templates/: _helpers.tpl  deployment.yaml  filesystem.yaml  service.yaml
k8s/helm/values/: production.yaml
src/rcsbchemsearch/: __init__.py  _about.py  _core.py  _global_vars.py  _project_metadata.py  _rdkit_utils.py  api.py  benchmark.py  dataset.py  etl.py  etl_cli.py  etl_pipeline_main.py  loader.py  models.py  poll.py  search.json  server.py  standardizer.py
src/rcsbchemsearch/core/: __init__.py  about.py  errors.py  json_utils.py  rdkit_utils.py
src/rcsbchemsearch/model/: elements.py  formula.py  models.py
tests/: __init__.py
